Dodanie angulara
